--- a/resource/tinymce/skins/lightgray/content.css
+++ b/resource/tinymce/skins/lightgray/content.css
@@ -30,13 +30,14 @@ img{
     ime-mode:active;
     /*width: 21cm;*/
     font-family: ms mincho, ｍｓ 明朝;
-    font-size: 18.666667px;
+    font-size: 16px;
     margin-bottom: 0px;
     border: none;
     margin-left:15px;
     /*margin-right: 30px !important;*/
     margin-top: 8px;
     word-wrap: break-word;
+    margin-top: 20px;
     /*padding-top: 15px !important;*/
 
     /*border:1px solid #000;*/
@@ -60,9 +61,10 @@ img{
   ime-mode:active;
   padding:10px 10px !important;
   font-family: ms mincho, ｍｓ 明朝;
-  font-size: 18.666667px;
+  font-size: 16px;
   margin: 0 !important;
   border: none !important;
+
 }
 
 ::-moz-selection {
