--- a/resource/css/tinymce.css
+++ b/resource/css/tinymce.css
@@ -11,7 +11,7 @@ body{
 }
 
 .page_separator {
-    margin:0 -10px 10px -16px !important;
+    margin: 15px -10px 20px -16px !important;
     padding: 2px 10px 5px 0;
     background-color:#dddddf;
     text-align:right;
